# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  06 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> portage_dep.py emerge:
  Added a reimplementation of digraph. Still some work to do (including
  comments) in order to support the differences between *DEPEND. Modified
  emerge a little to build up both dep graphs for testing purposes.

  05 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> doins: Added vapier's fix
  for doins changing existing directory permissions. #69896

  04 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> tbz2tool.c: Added include
  for stdlib.h as per vapier's bug report. #70001

  04 Nov 2004; Marius Mauch <genone@gentoo.org> pym/portage.py: Added
  a 'return 0' in treewalk() to avoid the "Unable to run required binary"
  problem.

  03 Nov 2004; Brian Harring <ferringb@gentoo.org> portage_dep.py: Bug in
  paren_reduce where it was returning a tuple, not a list.

  03 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> dispatch-conf: Simplified
  the temp file creation and usage.

  03 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed issues
  with PROVIDE calculation by flattening the dep array. #32114

  02 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed two bugs
  in the ExtractKernelVersion changes as per dsd's patch. #67804

  02 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> ebuild.sh: Turned off
  shell option extglob as it interferes with the g++ QA interceptor. #69690

  02 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed a bug
  where a broken symlink blocking the installation of a regular file would
  cause a traceback. #69672

  02 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> quickpkg: Applied vapier's